--- a/pets/app/src/main/res/values/strings.xml
+++ b/pets/app/src/main/res/values/strings.xml
@@ -14,4 +14,10 @@
     <string name="pet_birth_day_month">Месяц</string>
     <string name="pet_button_create">Создать</string>
     <string name="pet_button_save">Сохранить</string>
+
+    <!--event-->
+    <string name="event_title_new_event">Новое событие</string>
+    <string name="event_event_name">Событие</string>
+    <string name="event_repeat_name">Повтор</string>
+    <string name="event_date_name">Дата</string>
 </resources>
