--- a/pets/app/src/main/res/values/strings.xml
+++ b/pets/app/src/main/res/values/strings.xml
@@ -2,8 +2,6 @@
     <string name="app_name">Pets</string>
 
     <!--pets-->
-    <string name="pet_title_create">Создание питомца</string>
-    <string name="pet_title_edit">Редактирование питомца</string>
     <string name="pet_name">Имя питомца</string>
     <string name="pet_type">Вид питомца</string>
     <string name="pet_sex">Пол</string>
@@ -14,4 +12,12 @@
     <string name="pet_birth_day_month">Месяц</string>
     <string name="pet_button_create">Создать</string>
     <string name="pet_button_save">Сохранить</string>
+    <string name="pet_button_delete">Удалить</string>
+
+    <!--options-->
+    <string name="options_toolbar_title">Параметры</string>
+    <string name="options_edit_pet">Редактировать питомца</string>
+    <string name="options_change_pet">Сменить питомца</string>
+    <string name="options_interview">Опрос</string>
+    <string name="options_statistic">Статистика</string>
 </resources>
