--- a/pets/app/src/main/res/values/strings.xml
+++ b/pets/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="options_change_pet">Сменить питомца</string>
     <string name="options_interview">Опрос</string>
     <string name="options_statistic">Статистика</string>
+
+    <!--change_pet-->
+    <string name="change_pet_add">Добавить нового</string>
 </resources>
