Add dropdown list for select day

--- a/pets/app/src/main/res/values/strings.xml
+++ b/pets/app/src/main/res/values/strings.xml
@@ -22,5 +22,5 @@
     <string name="options_statistic">Статистика</string>
 
     <!--interview-->
-    <string name="day_type">Опрос за</string>
+    <string name="day_type">Опрос за день</string>
 </resources>
