Add texts view for interview

--- a/pets/app/src/main/res/values/strings.xml
+++ b/pets/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
 
     <!--interview-->
     <string name="day_type">Опрос за день</string>
+    <string name="interview_pet_icon_label">Оцените настроение вашего питомца</string>
+    <string name="interview_footer">Проходите опрос каждый день для полчения статистики в конце месяца</string>
 </resources>
