--- a/pets/app/src/main/res/values/strings.xml
+++ b/pets/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="options_statistic">Статистика</string>
 
     <!--interview-->
+    <string name="interview_toolbar_title">Ежедневный опрос</string>
     <string name="interview_day_type">Опрос за день</string>
     <string name="interview_pet_icon_label">Оцените настроение вашего питомца</string>
     <string name="interview_footer">Проходите опрос каждый день для полчения статистики в конце месяца</string>
