--- a/pets/app/src/main/res/values/strings.xml
+++ b/pets/app/src/main/res/values/strings.xml
@@ -23,4 +23,15 @@
 
     <!--change_pet-->
     <string name="change_pet_add">Добавить нового</string>
+
+    <!--interview-->
+    <string name="interview_toolbar_title">Ежедневный опрос</string>
+    <string name="interview_day_type">Опрос за день</string>
+    <string name="interview_pet_icon_label">Оцените настроение вашего питомца</string>
+    <string name="interview_footer">Проходите опрос каждый день для полчения статистики в конце месяца</string>
+    <string name="interview_rating_1.0">Агрессивный</string>
+    <string name="interview_rating_2.0">Злой</string>
+    <string name="interview_rating_3.0">Спокойный</string>
+    <string name="interview_rating_4.0">Добрый</string>
+    <string name="interview_rating_5.0">Ласковый</string>
 </resources>
