--- a/pets/app/src/main/res/values/strings.xml
+++ b/pets/app/src/main/res/values/strings.xml
@@ -42,14 +42,12 @@
 
     <!--interview-->
     <string name="interview_toolbar_title">Ежедневный опрос</string>
-    <string name="interview_day_type">Опрос за день</string>
     <string name="interview_pet_icon_label">Оцените настроение вашего питомца</string>
     <string name="interview_footer">Проходите опрос каждый день для полчения статистики в конце месяца</string>
-    <string name="interview_rating_1.0">Агрессивный</string>
-    <string name="interview_rating_2.0">Злой</string>
-    <string name="interview_rating_3.0">Спокойный</string>
-    <string name="interview_rating_4.0">Добрый</string>
-    <string name="interview_rating_5.0">Ласковый</string>
+
+    <!--statistic-->
+    <string name="statistic_toolbar_title">Статистика</string>
+    <string name="statistic_empty_data">Нет данных для построения статистики</string>
 
     <!--date_picker-->
     <string name="date_picker_select_date">Выберите дату</string>
